<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:text="@string/str_basic_details"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/font_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenant_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/AppTheme.TextInputLayout">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textSize="@dimen/font_14" >

            </android.support.v7.widget.AppCompatEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_email"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone"
            tools:text="Please enter valid email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenant_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            app:theme="@style/AppTheme.TextInputLayout">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_first_name"
                android:inputType="textPersonName"
                android:digits="@string/str_alphabets"
                android:maxLength="40"
                android:textSize="@dimen/font_14" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_first_name"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenant_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            app:theme="@style/AppTheme.TextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_last_name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:textSize="@dimen/font_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_last_name"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenant_mob_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            app:theme="@style/AppTheme.TextInputLayout">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_mobile"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="@dimen/font_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_mobile"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            app:theme="@style/AppTheme.TextInputLayout">

            <EditText
                android:id="@+id/tenant_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_address"
                android:inputType="text|textMultiLine"
                android:lines="3"
                android:maxLength="120"
                android:maxLines="3"
                android:textSize="@dimen/font_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_address"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />
    </LinearLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:text="@string/str_offical_details"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/font_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tenant_rent_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_18"
            android:layout_marginRight="@dimen/dimen_16"
            android:drawableRight="@drawable/ic_drop_drown_grey"
            android:gravity="center_vertical"
            android:hint="@string/str_admission_date"
            android:paddingBottom="10dp"
            android:paddingTop="@dimen/dimen_10"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/font_16" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_rent_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_rent_date"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/pg_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_10"
            app:ms_alignLabels="true"
            app:ms_arrowColor="@android:color/darker_gray"
            app:ms_arrowSize="@dimen/dimen_16"
            app:ms_baseColor="@android:color/darker_gray"
            app:ms_enableFloatingLabel="true"
            app:ms_floatingLabelColor="@android:color/darker_gray"
            app:ms_floatingLabelText="@string/str_pg_details"
            app:ms_highlightColor="@color/material_login_background"
            app:ms_hint="@string/str_pg_details"
            app:ms_hintColor="@android:color/darker_gray"
            app:ms_multiline="false"
            app:ms_thickness="@dimen/dimen_0.5" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_pg"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tenant_room_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            app:theme="@style/AppTheme.TextInputLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_room_num"
                android:inputType="textNoSuggestions"
                android:textSize="@dimen/font_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/err_room_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingRight="@dimen/dimen_16"
            android:text="@string/err_valid_room"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_12"
            android:visibility="gone" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/save_tenant_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/dimen_16"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginRight="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/material_login_background"
        android:gravity="center"
        android:minHeight="@dimen/dimen_48"
        android:text="@string/str_save"
        android:textColor="@color/material_login_login_color"
        android:textSize="@dimen/font_16" />


</LinearLayout>